--- a/WebContent/style/css/index.css
+++ b/WebContent/style/css/index.css
@@ -160,6 +160,10 @@ hr.light-100{
     max-height:300px;
     overflow:auto;
 }
+.list-group {
+    max-height:350px;
+    overflow:auto;
+}
 .commentList li {
     margin-top:10px;
 }
