--- a/WebContent/style/css/index.css
+++ b/WebContent/style/css/index.css
@@ -158,7 +158,8 @@ hr.light-100{
 .commentList {
     list-style:none;
     max-height:300px;
-    overflow:auto;
+    overflow-y: scroll;
+	overflow-x: hidden;
 }
 .list-group {
     max-height:350px;
